# rust-micro-todo

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  rustfmt.toml
api/: Cargo.toml
api/src/: error.rs  main.rs  settings.rs
api/src/todo/: handlers.rs  mod.rs  models.rs  routes.rs  service.rs
helm_chart/: Chart.yaml  values.yaml
helm_chart/templates/: api.yaml  todo.yaml
src/api/: Cargo.toml
src/api/src/: error.rs  main.rs  todo.rs
src/api/src/todo/: handlers.rs  models.rs  routes.rs
src/proto/: todo.proto
src/todo/: Cargo.toml
src/todo/src/: error.rs  main.rs  server.rs  settings.rs
todo/: Cargo.toml
todo/migrations/: 0001_create_table_todos.sql
todo/src/: error.rs  main.rs  server.rs  settings.rs
todo/src/repository/: error.rs  hashmap.rs  mod.rs  model.rs  postgres.rs  repository.rs
