[package]
name = "api"
version = "0.1.0"
authors = ["Andrey Ivanov <andreymgn@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
tonic = "0.3"
prost = "0.6"
prost-types = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
slog = "2"
slog-async = "2"
slog-bunyan = "2"
config = "0.10"

[build-dependencies]
tonic-build = { version = "0.3", default-features = false, features = ["transport", "prost"] }
