[package]
name = "todo"
version = "0.1.0"
authors = ["Andrey Ivanov <andreymgn@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["macros"] }
libxid = "0.1.5"
slog = "2"
slog-async = "2"
slog-bunyan = "2"

[build-dependencies]
tonic-build = "0.3"